--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="mainBack">#292929</color>
+    <color name="textColor1">#ffffff</color>
+    <color name="iconTint">#ffffff</color>
 </resources>
