--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="mainBack">#f8f8f8</color>
+    <color name="textColor1">#2a2a2a</color>
+    <color name="iconTint">#2a2a2a</color>
 </resources>
